--- a/example/Example/FeatureFlags.xaml
+++ b/example/Example/FeatureFlags.xaml
@@ -10,6 +10,7 @@
     <featureFlag:OnOrBeforeDateFeatureFlag x:Key="BeforeThatsTrue"  Date="01-Jan-2040 18:00:00" />
     <featureFlag:OnOrAfterDateFeatureFlag  x:Key="AfterThatsFalse"  Date="01-Jan-2040 18:00:00" />
     <featureFlag:OnOrBeforeDateFeatureFlag x:Key="BeforeThatsFalse" Date="01-Jan-2018 18:00:00" />
+    <featureFlag:VersionFeatureFlag        x:Key="VersionFlag"      Version="1.0.1" />
                         
     <featureFlag:AllFeatureFlag x:Key="AllFlag" >
         <featureFlag:AlwaysOnFeatureFlag />
