--- a/example/Example/FeatureFlags.xaml
+++ b/example/Example/FeatureFlags.xaml
@@ -3,6 +3,7 @@
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:featureFlag="clr-namespace:FeatureFlag;assembly=FeatureFlag.Forms"
+             xmlns:system="clr-namespace:System;assembly=netstandard"
              x:Class="Example.FeatureFlags">
     
     <featureFlag:SimpleFeatureFlag         x:Key="SimpleFlag"       IsEnabled="True" />
@@ -10,7 +11,14 @@
     <featureFlag:OnOrBeforeDateFeatureFlag x:Key="BeforeThatsTrue"  Date="01-Jan-2040 18:00:00" />
     <featureFlag:OnOrAfterDateFeatureFlag  x:Key="AfterThatsFalse"  Date="01-Jan-2040 18:00:00" />
     <featureFlag:OnOrBeforeDateFeatureFlag x:Key="BeforeThatsFalse" Date="01-Jan-2018 18:00:00" />
-    <featureFlag:VersionFeatureFlag        x:Key="VersionFlag"      Version="1.0.1" />
+    <featureFlag:VersionFeatureFlag        x:Key="VersionFlag" >
+        <featureFlag:VersionFeatureFlag.Version>
+            <OnPlatform x:TypeArguments="system:String">
+                <On Platform="iOS" Value="1.0" />
+                <On Platform="Android" Value="1.1" />
+            </OnPlatform>
+        </featureFlag:VersionFeatureFlag.Version>
+    </featureFlag:VersionFeatureFlag>
                         
     <featureFlag:AllFeatureFlag x:Key="AllFlag" >
         <featureFlag:AlwaysOnFeatureFlag />
