[CF] renamed project

--- a/example/Example/App.xaml
+++ b/example/Example/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
             
             <ResourceDictionary.MergedDictionaries>
-                <example:FeatureFlags />
+                <example:FutureFlags />
                 <example:Styles />
             </ResourceDictionary.MergedDictionaries>
 
