--- a/example/Example/FutureFlags.xaml
+++ b/example/Example/FutureFlags.xaml
@@ -11,6 +11,7 @@
     <featureFlag:OnOrBeforeDateFutureFlag x:Key="BeforeThatsTrue"  Date="01-Jan-2040 18:00:00" />
     <featureFlag:OnOrAfterDateFutureFlag  x:Key="AfterThatsFalse"  Date="01-Jan-2040 18:00:00" />
     <featureFlag:OnOrBeforeDateFutureFlag x:Key="BeforeThatsFalse" Date="01-Jan-2018 18:00:00" />
+    <featureFlag:VersionFutureFlag        x:Key="FutureVersion"    Version="9.9.9.9"/>
     
     <featureFlag:VersionFutureFlag        x:Key="VersionFlag" >
         <featureFlag:VersionFutureFlag.Version>
