--- a/example/Example/FutureFlags.xaml
+++ b/example/Example/FutureFlags.xaml
@@ -14,7 +14,10 @@
     <featureFlag:VersionFutureFlag        x:Key="FutureVersion"    Version="9.9.9.9"/>
     <featureFlag:JsonRestFutureFlag       x:Key="TrueRest"         Url="https://my-json-server.typicode.com/chaseflorell/futureflag/trueEnabled" />
     <featureFlag:JsonRestFutureFlag       x:Key="FalseRest"        Url="https://my-json-server.typicode.com/chaseflorell/futureflag/falseEnabled" />
-    <featureFlag:CachedFutureFlagProvider  x:Key="Cached"           CacheDuration="00:01:00"/>
+    
+    <featureFlag:CachedFutureFlagProvider x:Key="CachedFutureFlagProvider" CacheDuration="00:01:00">
+        <featureFlag:SimpleFutureFlag IsEnabled="True"/>
+    </featureFlag:CachedFutureFlagProvider>
     
     <featureFlag:VersionFutureFlag        x:Key="VersionFlag" >
         <featureFlag:VersionFutureFlag.Version>
