--- a/example/Example/Features/Main/MainPage.xaml
+++ b/example/Example/Features/Main/MainPage.xaml
@@ -5,7 +5,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              xmlns:main="clr-namespace:Example.Features.Main;assembly=Example"
-             xmlns:futures="clr-namespace:FutureFlag;assembly=FutureFlag.Forms"
+             xmlns:futures="http://github.com/chaseflorell/futureflag"
              ios:Page.UseSafeArea="true"
              BackgroundColor="LightGray">
 
