--- a/example/Example/FutureFlags.xaml
+++ b/example/Example/FutureFlags.xaml
@@ -2,7 +2,7 @@
 
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:featureFlag="http://github.com/chaseflorell/futureflag"
+             xmlns:featureFlag="clr-namespace:FutureFlag;assembly=FutureFlag.Forms"
              xmlns:system="clr-namespace:System;assembly=netstandard"
              x:Class="Example.FutureFlags">
     
